--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="vendor/vendor.js"></script>
     <script src="lib/preloadjs-0.6.1.min.js"></script>
-    <script src="lib/pixi.min.js"></script>
+    <script src="lib/pixi.js"></script>
     <script src="js/app.js"></script>
 
 </body>
