--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="vendor/vendor.js"></script>
     <script src="lib/preloadjs-0.6.1.min.js"></script>
     <script src="lib/SplitText.min.js"></script>
+    <script src="lib/matter.min.js"></script>
     <script src="lib/pixi.js"></script>
     <script src="js/app.js"></script>
 
